--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,21 @@ button{
  border: none;
  
 }
+#animatedText span {
+  display: inline-block;
+  opacity: 0;
+  filter: blur(4px);
+  transform: translateY(20px);
+  animation: appearBlur 0.6s ease forwards;
+}
+
+@keyframes appearBlur {
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+  }
+}
 @media(max-width: 500px){
     .container{
         padding: 20px 15px;
@@ -180,7 +195,17 @@ button{
     background: white;
     padding: 30px;
   }
-  
+  .right-column button{
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #303030;
+     color: white;
+    border-radius: 40px;
+    font-size: 2rem;
+    cursor: pointer;
+    border: none;
+    
+  }
   .section {
     margin-bottom: 30px;
   }
