--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,10 @@ button{
     width: 35%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: stretch;
     margin-left: 20px;
+    
   }
   
   .profile-header {
@@ -142,19 +144,19 @@ button{
   .profile-image {
     position: absolute;
     top: 100px;
-    bottom: 0px;
     display: flex; 
     justify-content: center;
+    overflow-x:  hidden;
   }
   .profile-image img {
-  
+    margin-left: 7px;
   width: 160px;
   height: 160px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid white;
-  background-color: white;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  border: 6px solid white;
+   
+ 
   }
   .profile-header p, .job-title{
     line-height: 2;
@@ -170,7 +172,8 @@ button{
   #ww{
     margin-left: 25%;
     margin-top: -14%;
-    
+    font-size: 18px;
+    font-weight: bold;
  }
  .contact-section{
   margin-top: 30px;
@@ -181,7 +184,7 @@ button{
  }
  .icone{
   margin-left: 5%;
-  margin-top: -10%;
+  margin-top: -33%;
   font-size: 30px;
   
  }
@@ -235,49 +238,100 @@ button{
   }
   
   .right-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 65%;
     background: white;
     padding: 30px;
   }
   .right-column button{
-    margin-top: 20px;
-    padding: 10px 20px;
+   align-self: flex-end;
+   margin-top: auto;
     background-color: #303030;
      color: white;
     border-radius: 40px;
     font-size: 2rem;
     cursor: pointer;
     border: none;
+    margin-bottom: 0%;
     
   }
-  .section {
+  .sectionApropos {
     margin-bottom: 30px;
   }
   
-  .section h2 {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-  }
   
-  .section p, .section li {
-    font-size: 14px;
+  
+  .sectionApropos p {
+    font-size: 12px;
     color: #444;
     line-height: 1.6;
-    list-style: none;
+    
   }
   
-  .skills li {
+  .competence {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+    
+  }
+  
+  .label {
+    width: 200px; /* largeur fixe pour aligner les textes */
+   
     margin-bottom: 5px;
   }
-  .text_sec{
-    margin-left: 55px;
-    margin-top:  -6%;
-    font-size:25px;
+  
+  .progress-bar {
+    width: 90px;
+    height:8px;
+    background-color: #ccc;
+    border-radius: 4px;
+    overflow: hidden;
   }
-  .iconee{
-    font-size: 15px;
-    margin-left: 10px;
-    margin-top: -6%;
+  
+  .progress {
+    height: 100%;
+    background-color: #303030;
+    transition: width 0.5s ease;
+    border-radius: 20px;
   }
+ .section-titre {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 20px;
+  font-size: 11px;
+  font-weight: bold;
+}
+
+.icone-container {
+  width: 42px;
+  height: 42px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+
+.icone-container img {
+  width: 26px;
+  height: 26px;
+  object-fit: contain; /* pour garder l’image bien visible et entière */
+}
+
+.ul{
+  margin-left: 15px;
+margin-bottom: 50PX;
+}  
+  
+  
+  
+  
+   
+
  
