--- a/styles.css
+++ b/styles.css
@@ -90,12 +90,12 @@ button{
         padding: 20px 15px;
     }
     h1{
-        font-size: 1rem;
+        font-size: 10px;
         text-align: center;
 
     }
     .mot-accueil{
-        font-size: 1rem;
+        font-size: 10px;
     }
     button{
         width: 50%;
@@ -103,19 +103,29 @@ button{
 }
 .containner {
     font-family: Arial, sans-serif;
-    margin: 0;
-    background-color: #f2f2f2;
+    background-color: white;
+    height: auto;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  form{
+    position: fixed;
+    bottom: 0;
+    left: 150px;
   }
   
   .cv-container {
-    height: 860px;
-    width: 595px;
+   background: #ccc;
+    width: 390px;
     display: flex;
-    max-width: 900px;
     height:auto ;
-    margin: 30px auto;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     box-sizing: border-box;
+    margin: 0auto;
   }
   
   .left-column {
@@ -124,7 +134,7 @@ button{
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
-    margin-left: 20px;
+    
     
   }
   
@@ -139,25 +149,36 @@ button{
   position: relative;
   overflow: visible;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
   }
   .profile-image {
     position: absolute;
-    top: 100px;
+    top: 170px;
     display: flex; 
     justify-content: center;
     overflow-x:  hidden;
   }
   .profile-image img {
-    margin-left: 7px;
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  object-fit: cover;
+    margin-left: 2px;
+  width: 80%;
+  border-radius: 100px;
   border: 6px solid white;
    
- 
   }
+  #name-header{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .profile-header p, .job-title{
     line-height: 2;
   }
@@ -172,7 +193,7 @@ button{
   #ww{
     margin-left: 25%;
     margin-top: -14%;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
  }
  .contact-section{
@@ -183,10 +204,19 @@ button{
   gap: 15px;
  }
  .icone{
-  margin-left: 5%;
-  margin-top: -33%;
-  font-size: 30px;
+  width: 32px;
+  height: 32px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
+ }
+ .icone img{
+  width: 26px;
+  height: 26px;
+  object-fit: contain;
  }
 
  .icon{
@@ -198,7 +228,10 @@ button{
  .text{
   margin-left: 30px;
   margin-top:  -9%;
-  font-size:2vh ;
+  font-size:9px ;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
  }
   
   .education-section {
@@ -210,13 +243,13 @@ button{
     border-top-right-radius: 100vh;
   }
   .educt{
-    font-size: 15px;
-    margin-left: 10px;
+    font-size: 10px;
+    margin-left: -25px;
     margin-top: -8%;
   }
   .texte{
-    margin-left: 45px;
-    margin-top:  -20%;
+    margin-left: 10px;
+    margin-top:  -40%;
     font-size:16px;
   }
   .education-section i{
@@ -234,7 +267,9 @@ button{
     gap: 10px;
   }
   .formation{
-    font-size: 13px;
+    font-size: 12px;
+    margin-left: -10px;
+    line-height: 2;
   }
   
   .right-column {
@@ -245,13 +280,13 @@ button{
     background: white;
     padding: 30px;
   }
-  .right-column button{
+  #btnToIndex button{
    align-self: flex-end;
    margin-top: auto;
     background-color: #303030;
      color: white;
     border-radius: 40px;
-    font-size: 2rem;
+    font-size: 1rem;
     cursor: pointer;
     border: none;
     margin-bottom: 0%;
@@ -259,10 +294,7 @@ button{
   }
   .sectionApropos {
     margin-bottom: 30px;
-  }
-  
-  
-  
+  } 
   .sectionApropos p {
     font-size: 12px;
     color: #444;
@@ -280,7 +312,7 @@ button{
   
   .label {
     width: 200px; /* largeur fixe pour aligner les textes */
-   
+   font-family:Arial, Helvetica, sans-serif;
     margin-bottom: 5px;
   }
   
@@ -303,13 +335,15 @@ button{
   align-items: center;
   gap: 12px;
   margin-bottom: 20px;
-  font-size: 11px;
+  font-size: 9px;
   font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .icone-container {
-  width: 42px;
-  height: 42px;
+  width: 32px;
+  height: 32px;
   background-color: black;
   border-radius: 50%;
   display: flex;
@@ -319,15 +353,18 @@ button{
 }
 
 .icone-container img {
-  width: 26px;
-  height: 26px;
+  width: 23px;
+  height: 23px;
   object-fit: contain; /* pour garder l’image bien visible et entière */
 }
 
 .ul{
   margin-left: 15px;
 margin-bottom: 50PX;
-}  
+font-size: 13px;
+line-height: 2;
+} 
+
   
   
   
