--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
 h1{
   color: white;
   margin-bottom: 150px;  
-  font-size: 2rem;
+  font-size: 48px;
  
 
 }
@@ -59,24 +59,39 @@ button{
  border: none;
  
 }
-#animatedText {
+@keyframes appearBlur {
+  0%{
+    opacity: 0;
+    transform: translateY(20px);
+    filter: blur(4px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(O);
+    filter: blur(0);
+  }
+}
+.letter {
+  display: inline-block;
+  opacity: 0;
+  animation: appearBlur 0.4s ease forwards;
+  animation-fill-mode: forwards;
+  filter: blur(4px);
+  transform: translateY(20px);
+}
+#animatedText,#animateText {
   word-wrap: break-word;
   display: flex;
   justify-content: center;
-  gap: 0.2em;
+  gap: 0.4em;
   text-align: center;
   max-width: 90%; /* Pour que ça s’adapte à l’écran */
   line-height: 2;
   margin: 0 auto;
+  font-size: 1.5rem;
+  flex-wrap: wrap;
 }
-#animatedText span {
-  display: inline-block;
-  white-space: nowrap;
-  opacity: 0;
-  filter: blur(4px);
-  transform: translateY(20px);
-  animation: appearBlur 0.6s ease forwards;
-}
+
 
 @keyframes appearBlur {
   to {
@@ -120,7 +135,7 @@ button{
   
   .cv-container {
    background: #ccc;
-    width: 390px;
+    width: 375px;
     display: flex;
     height:auto ;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -191,11 +206,12 @@ button{
     color: #ccc;
   }
   #ww{
-    margin-left: 25%;
-    margin-top: -14%;
-    font-size: 16px;
+    margin-left: 28%;
+    margin-top: -15%;
+    
     font-weight: bold;
  }
+ 
  .contact-section{
   margin-top: 30px;
   margin-bottom: 30px;
@@ -204,8 +220,9 @@ button{
   gap: 15px;
  }
  .icone{
-  width: 32px;
-  height: 32px;
+  margin-left: 2%;
+  width: 30px;
+  height: 30px;
   background-color: black;
   border-radius: 50%;
   display: flex;
@@ -214,21 +231,21 @@ button{
   
  }
  .icone img{
-  width: 26px;
-  height: 26px;
+  width: 23px;
+  height: 23px;
   object-fit: contain;
  }
 
  .icon{
   font-size: 15px;
   margin-left: 10px;
-  margin-top: -8%;
+ 
  }
 
  .text{
   margin-left: 30px;
-  margin-top:  -9%;
-  font-size:9px ;
+  margin-top:  -12%;
+  font-size:10px ;
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
@@ -248,7 +265,7 @@ button{
     margin-top: -8%;
   }
   .texte{
-    margin-left: 10px;
+    margin-left: 3px;
     margin-top:  -40%;
     font-size:16px;
   }
@@ -256,7 +273,7 @@ button{
     background: white;
     color: #303030;
     border-radius: 100vh;
-    font-size:25px;
+    font-size:20px;
     margin-left: -9px;
   }
   .education-section  {
