--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,10 @@
     flex-direction: column;
     align-items: center;
 }
-h1{
-  color: white;
-  margin-bottom: 150px;  
-  font-size: 48px;
+
  
 
-}
+
 .img{
   width: 100%;
   max-width: 100%;
@@ -42,13 +39,7 @@ h1{
   border-radius: 20px;
   
 }
-#animateText{
-    width: 100%;
-    height: auto;
-    font-size: 1.1rem;
-    margin-top: -25px;
 
-}
 button{
  margin-top: 20px;
  padding: 10px 20px;
@@ -58,6 +49,12 @@ button{
  cursor: pointer;
  border: none;
  
+}
+#btnToCv{
+  transition: all 0.3s ease;
+}
+#btnToCv:hover{
+  transform: scale(1.1);
 }
 @keyframes appearBlur {
   0%{
@@ -299,7 +296,6 @@ button{
   }
   #btnToIndex button{
    align-self: flex-end;
-   margin-top: auto;
     background-color: #303030;
      color: white;
     border-radius: 40px;
@@ -307,7 +303,14 @@ button{
     cursor: pointer;
     border: none;
     margin-bottom: 0%;
+    width: 100%;
     
+  }
+  .btn-telecharger button{
+    border-radius: 40px;
+    background-color: #303030;
+    color: white;
+    width: 100%;
   }
   .sectionApropos {
     margin-bottom: 30px;
